fix(lexical): toolbar icon alignment

--- a/apps/client/src/widgets/type_widgets/text/lexical/ToolbarPlugin.css
+++ b/apps/client/src/widgets/type_widgets/text/lexical/ToolbarPlugin.css
@@ -9,20 +9,6 @@
         vertical-align: middle;
     }
 
-    .toolbar button.toolbar-item {
-        border: 0;
-        display: flex;
-        background: none;
-        border-radius: 10px;
-        padding: 8px;
-        cursor: pointer;
-        vertical-align: middle;
-    }
-
-    .toolbar button.toolbar-item:disabled {
-        cursor: not-allowed;
-    }
-
     .toolbar .divider {
         width: 1px;
         background-color: #eee;
